--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit
-numpy
-pandas
-plotly
-matplotlib
-geopandas
-folium
-sqlalchemy
-pickle
-pyreadstat
+streamlit==1.29.0
+numpy==1.24.4
+pandas==2.0.3
+plotly==5.18.0
+matplotlib==3.7.4
+geopandas==0.13.2
+shapely==2.0.1  
+folium==0.14.0
+sqlalchemy==2.0.20
+pyreadstat==1.2.0
