--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,14 @@ cut.py
 maps/buildings/
 11p2_renovated.pkl
 11p1_renovated.pkl
+12p8_renovated_analyse.pkl
+11p1_renovated_3_analyse.pkl
+11p2_renovated_3_analyse.pkl
+12p1_renovated_analyse.pkl
+12p2_renovated_analyse.pkl
+12p3_renovated_analyse.pkl
+12p4_renovated_analyse.pkl
+12p5_renovated_analyse.pkl
+12p6_renovated_analyse.pkl
+12p7_renovated_analyse.pkl
+logic/__pycache__/func.cpython-312.pyc
