--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ maps/buildings/
 12p6_renovated_analyse.pkl
 12p7_renovated_analyse.pkl
 logic/__pycache__/func.cpython-312.pyc
+pages/3_-_Analyse global.py
